cleaned up all the auto-generated names (I hope). Added what I'm guessing is the right implementation for each platform (TBD).

--- a/XamJam.Screen/XamJam.Screen/Plugin.XamJam.Screen.Android/Plugin.XamJam.Screen.Android.csproj
+++ b/XamJam.Screen/XamJam.Screen/Plugin.XamJam.Screen.Android/Plugin.XamJam.Screen.Android.csproj
@@ -45,10 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\Plugin.XamJam.Screen\CrossXamJam.Screen.cs">
-      <Link>CrossXamJam.Screen.cs</Link>
-    </Compile>
-    <Compile Include="XamJam.ScreenImplementation.cs" />
+    <Compile Include="ScreenImplementation.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
