--- a/XamJam.Screen/XamJam.Screen/Plugin.XamJam.Screen.WindowsPhone8/Plugin.XamJam.Screen.WindowsPhone8.csproj
+++ b/XamJam.Screen/XamJam.Screen/Plugin.XamJam.Screen.WindowsPhone8/Plugin.XamJam.Screen.WindowsPhone8.csproj
@@ -85,10 +85,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="..\Plugin.XamJam.Screen\CrossXamJam.Screen.cs">
-      <Link>CrossXamJam.Screen.cs</Link>
-    </Compile>
-    <Compile Include="XamJam.ScreenImplementation.cs" />
+    <Compile Include="ScreenImplementation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
