--- a/XamJam.Screen/XamJam.Screen/Plugin.XamJam.Screen.iOS/Plugin.XamJam.Screen.iOS.csproj
+++ b/XamJam.Screen/XamJam.Screen/Plugin.XamJam.Screen.iOS/Plugin.XamJam.Screen.iOS.csproj
@@ -35,10 +35,7 @@
     <DocumentationFile>bin\iPhone\Release\Plugin.XamJam.Screen.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="..\Plugin.XamJam.Screen\CrossXamJam.Screen.cs">
-      <Link>CrossXamJam.Screen.cs</Link>
-    </Compile>
-    <Compile Include="XamJam.ScreenImplementation.cs" />
+    <Compile Include="ScreenImplementation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
