--- a/XamJam.Screen/XamJam.Screen/Plugin.XamJam.Screen.Abstractions/Plugin.XamJam.Screen.Abstractions.csproj
+++ b/XamJam.Screen/XamJam.Screen/Plugin.XamJam.Screen.Abstractions/Plugin.XamJam.Screen.Abstractions.csproj
@@ -35,11 +35,14 @@
     <DocumentationFile>bin\Release\Plugin.XamJam.Screen.Abstractions.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <!-- A reference to the entire .NET Framework is automatically included -->
+    <Compile Include="Screen.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScreenSize.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IXamJam.Screen.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Reference Include="Xamarin.iOS">
+      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\Xamarin.iOS\v1.0\Xamarin.iOS.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
