--- a/XamJam.Screen/Plugin.XamJam.Screen.nuspec
+++ b/XamJam.Screen/Plugin.XamJam.Screen.nuspec
@@ -20,67 +20,67 @@
    </metadata>
    <files>
      <!--Core-->
-     <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractionsdll" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.XamJam.Screen.Abstractionsdll" />
-     <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractionsxml" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.XamJam.Screen.Abstractionsxml" />
-     <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractionspdb" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.XamJam.Screen.Abstractionspdb" />
+     <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.dll" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.XamJam.Screen.Abstractions.dll" />
+     <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.xml" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.XamJam.Screen.Abstractions.xml" />
+     <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.pdb" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.XamJam.Screen.Abstractions.pdb" />
      <file src="Plugin.XamJam.Screen\bin\Release\Plugin.XamJam.Screen.dll" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.XamJam.Screen.dll" />
      <file src="Plugin.XamJam.Screen\bin\Release\Plugin.XamJam.Screen.xml" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.XamJam.Screen.xml" />
      <file src="Plugin.XamJam.Screen\bin\Release\Plugin.XamJam.Screen.pdb" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.XamJam.Screen.pdb" />
  
      <!--Xamarin.Android-->
-     <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractionsdll" target="lib\MonoAndroid10\Plugin.XamJam.Screen.Abstractionsdll" />
-     <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractionsxml" target="lib\MonoAndroid10\Plugin.XamJam.Screen.Abstractionsxml" />
-     <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractionspdb" target="lib\MonoAndroid10\Plugin.XamJam.Screen.Abstractionspdb" />
+     <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.dll" target="lib\MonoAndroid10\Plugin.XamJam.Screen.Abstractions.dll" />
+     <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.xml" target="lib\MonoAndroid10\Plugin.XamJam.Screen.Abstractions.xml" />
+     <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.pdb" target="lib\MonoAndroid10\Plugin.XamJam.Screen.Abstractions.pdb" />
      <file src="Plugin.XamJam.Screen.Android\bin\Release\Plugin.XamJam.Screen.dll" target="lib\MonoAndroid10\Plugin.XamJam.Screen.dll" />
      <file src="Plugin.XamJam.Screen.Android\bin\Release\Plugin.XamJam.Screen.xml" target="lib\MonoAndroid10\Plugin.XamJam.Screen.xml" />
      <file src="Plugin.XamJam.Screen.Android\bin\Release\Plugin.XamJam.Screen.pdb" target="lib\MonoAndroid10\Plugin.XamJam.Screen.pdb" />
  
      <!--Xamarin.iOS-->
-     <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractionsdll" target="lib\MonoTouch10\Plugin.XamJam.Screen.Abstractionsdll" />
-     <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractionsxml" target="lib\MonoTouch10\Plugin.XamJam.Screen.Abstractionsxml" />
-     <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractionspdb" target="lib\MonoTouch10\Plugin.XamJam.Screen.Abstractionspdb" />
+     <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.dll" target="lib\MonoTouch10\Plugin.XamJam.Screen.Abstractions.dll" />
+     <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.xml" target="lib\MonoTouch10\Plugin.XamJam.Screen.Abstractions.xml" />
+     <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.pdb" target="lib\MonoTouch10\Plugin.XamJam.Screen.Abstractions.pdb" />
      <file src="Plugin.XamJam.Screen.iOS\bin\iPhone\Release\Plugin.XamJam.Screen.dll" target="lib\MonoTouch10\Plugin.XamJam.Screen.dll" />
      <file src="Plugin.XamJam.Screen.iOS\bin\iPhone\Release\Plugin.XamJam.Screen.xml" target="lib\MonoTouch10\Plugin.XamJam.Screen.xml" />
  
-     <!--Xamarin.iOS Unified-->
-     <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractionsdll" target="lib\Xamarin.iOS10\Plugin.XamJam.Screen.Abstractionsdll" />
-     <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractionsxml" target="lib\Xamarin.iOS10\Plugin.XamJam.Screen.Abstractionsxml" />
-     <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractionspdb" target="lib\Xamarin.iOS10\Plugin.XamJam.Screen.Abstractionspdb" />
+     <!--Xamarin.iOS Unified
+     <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.dll" target="lib\Xamarin.iOS10\Plugin.XamJam.Screen.Abstractions.dll" />
+     <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.xml" target="lib\Xamarin.iOS10\Plugin.XamJam.Screen.Abstractions.xml" />
+     <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.pdb" target="lib\Xamarin.iOS10\Plugin.XamJam.Screen.Abstractions.pdb" />
      <file src="Plugin.XamJam.Screen.iOSUnified\bin\iPhone\Release\Plugin.XamJam.Screen.dll" target="lib\Xamarin.iOS10\Plugin.XamJam.Screen.dll" />
      <file src="Plugin.XamJam.Screen.iOSUnified\bin\iPhone\Release\Plugin.XamJam.Screen.xml" target="lib\Xamarin.iOS10\Plugin.XamJam.Screen.xml" />
+	 -->
    
      <!--Win Store-->
-     <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractionsdll" target="lib\UAP10\Plugin.XamJam.Screen.Abstractionsdll" />
-     <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractionsxml" target="lib\UAP10\Plugin.XamJam.Screen.Abstractionsxml" />
-     <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractionsxml" target="lib\UAP10\Plugin.XamJam.Screen.Abstractionspdb" />
+     <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.dll" target="lib\UAP10\Plugin.XamJam.Screen.Abstractions.dll" />
+     <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.xml" target="lib\UAP10\Plugin.XamJam.Screen.Abstractions.xml" />
+     <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.xml" target="lib\UAP10\Plugin.XamJam.Screen.Abstractions.pdb" />
      <file src="Plugin.XamJam.Screen.UWP\bin\Release\Plugin.XamJam.Screen.dll" target="lib\UAP10\Plugin.XamJam.Screen.dll" />
      <file src="Plugin.XamJam.Screen.UWP\bin\Release\Plugin.XamJam.Screen.xml" target="lib\UAP10\Plugin.XamJam.Screen.xml" />
      <file src="Plugin.XamJam.Screen.UWP\bin\Release\Plugin.XamJam.Screen.pdb" target="lib\UAP10\Plugin.XamJam.Screen.pdb" />
  
-     <!--Win Phone-->
-     <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractionsdll" target="lib\wp8\Plugin.XamJam.Screen.Abstractionsdll" />
-     <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractionsxml" target="lib\wp8\Plugin.XamJam.Screen.Abstractionsxml" />
-     <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractionsxml" target="lib\wp8\Plugin.XamJam.Screen.Abstractionspdb" />
-     <file src="Plugin.XamJam.Screen.WinPhone\bin\Release\Plugin.XamJam.Screen.dll" target="lib\wp8\Plugin.XamJam.Screen.dll" />
-     <file src="Plugin.XamJam.Screen.WinPhone\bin\Release\Plugin.XamJam.Screen.xml" target="lib\wp8\Plugin.XamJam.Screen.xml" />
-     <file src="Plugin.XamJam.Screen.WinPhone\bin\Release\Plugin.XamJam.Screen.pdb" target="lib\wp8\Plugin.XamJam.Screen.pdb" />
+     <!--Win Phone 8.0 -->
+     <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.dll" target="lib\wp8\Plugin.XamJam.Screen.Abstractions.dll" />
+     <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.xml" target="lib\wp8\Plugin.XamJam.Screen.Abstractions.xml" />
+     <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.xml" target="lib\wp8\Plugin.XamJam.Screen.Abstractions.pdb" />
+     <file src="Plugin.XamJam.Screen.WindowsPhone8\bin\Release\Plugin.XamJam.Screen.dll" target="lib\wp8\Plugin.XamJam.Screen.dll" />
+     <file src="Plugin.XamJam.Screen.WindowsPhone8\bin\Release\Plugin.XamJam.Screen.xml" target="lib\wp8\Plugin.XamJam.Screen.xml" />
+     <file src="Plugin.XamJam.Screen.WindowsPhone8\bin\Release\Plugin.XamJam.Screen.pdb" target="lib\wp8\Plugin.XamJam.Screen.pdb" />
  
-     <!--Win Phone RT-->
-     <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractionsdll" target="lib\wpa81\Plugin.XamJam.Screen.Abstractionsdll" />
-     <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractionsxml" target="lib\wpa81\Plugin.XamJam.Screen.Abstractionsxml" />
-     <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractionsxml" target="lib\wpa81\Plugin.XamJam.Screen.Abstractionspdb" />
-     <file src="Plugin.XamJam.Screen.WinPhoneRT\bin\Release\Plugin.XamJam.Screen.dll" target="lib\wpa81\Plugin.XamJam.Screen.dll" />
-     <file src="Plugin.XamJam.Screen.WinPhoneRT\bin\Release\Plugin.XamJam.Screen.xml" target="lib\wpa81\Plugin.XamJam.Screen.xml" />
-     <file src="Plugin.XamJam.Screen.WinPhoneRT\bin\Release\Plugin.XamJam.Screen.pdb" target="lib\wpa81\Plugin.XamJam.Screen.pdb" />
+     <!--Win Phone RT / Windows Phone 8.1-->
+     <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.dll" target="lib\wpa81\Plugin.XamJam.Screen.Abstractions.dll" />
+     <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.xml" target="lib\wpa81\Plugin.XamJam.Screen.Abstractions.xml" />
+     <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.xml" target="lib\wpa81\Plugin.XamJam.Screen.Abstractions.pdb" />
+     <file src="Plugin.XamJam.Screen.WindowsPhone81\bin\Release\Plugin.XamJam.Screen.dll" target="lib\wpa81\Plugin.XamJam.Screen.dll" />
+     <file src="Plugin.XamJam.Screen.WindowsPhone81\bin\Release\Plugin.XamJam.Screen.xml" target="lib\wpa81\Plugin.XamJam.Screen.xml" />
+     <file src="Plugin.XamJam.Screen.WindowsPhone81\bin\Release\Plugin.XamJam.Screen.pdb" target="lib\wpa81\Plugin.XamJam.Screen.pdb" />
  
      <!--Win Store-->
-     <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractionsdll" target="lib\win8\Plugin.XamJam.Screen.Abstractionsdll" />
-     <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractionsxml" target="lib\win8\Plugin.XamJam.Screen.Abstractionsxml" />
-     <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractionsxml" target="lib\win8\Plugin.XamJam.Screen.Abstractionspdb" />
-     <file src="Plugin.XamJam.Screen.WinStore\bin\Release\Plugin.XamJam.Screen.dll" target="lib\win8\Plugin.XamJam.Screen.dll" />
-     <file src="Plugin.XamJam.Screen.WinStore\bin\Release\Plugin.XamJam.Screen.xml" target="lib\win8\Plugin.XamJam.Screen.xml" />
-     <file src="Plugin.XamJam.Screen.WinStore\bin\Release\Plugin.XamJam.Screen.pdb" target="lib\win8\Plugin.XamJam.Screen.pdb" />
- 
-     
+     <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.dll" target="lib\win8\Plugin.XamJam.Screen.Abstractions.dll" />
+     <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.xml" target="lib\win8\Plugin.XamJam.Screen.Abstractions.xml" />
+     <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.xml" target="lib\win8\Plugin.XamJam.Screen.Abstractions.pdb" />
+     <file src="Plugin.XamJam.Screen.WindowsStore\bin\Release\Plugin.XamJam.Screen.dll" target="lib\win8\Plugin.XamJam.Screen.dll" />
+     <file src="Plugin.XamJam.Screen.WindowsStore\bin\Release\Plugin.XamJam.Screen.xml" target="lib\win8\Plugin.XamJam.Screen.xml" />
+     <file src="Plugin.XamJam.Screen.WindowsStore\bin\Release\Plugin.XamJam.Screen.pdb" target="lib\win8\Plugin.XamJam.Screen.pdb" />
+      
    </files>
 </package>
