almost ready for version 1.0, going to try to consolidate like-files (ios and winblows)

--- a/XamJam.Screen/Plugin.XamJam.Screen.Android/Plugin.XamJam.Screen.Android.csproj
+++ b/XamJam.Screen/Plugin.XamJam.Screen.Android/Plugin.XamJam.Screen.Android.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CrossScreen.cs" />
     <Compile Include="ScreenImplementation.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
