--- a/XamJam.Screen/Plugin.XamJam.Screen.WindowsStore/Plugin.XamJam.Screen.WindowsStore.csproj
+++ b/XamJam.Screen/Plugin.XamJam.Screen.WindowsStore/Plugin.XamJam.Screen.WindowsStore.csproj
@@ -109,6 +109,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CrossScreen.cs" />
     <Compile Include="ScreenImplementation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
