--- a/XamJam.Screen/Plugin.XamJam.Screen.iOS/Plugin.XamJam.Screen.iOS.csproj
+++ b/XamJam.Screen/Plugin.XamJam.Screen.iOS/Plugin.XamJam.Screen.iOS.csproj
@@ -35,6 +35,7 @@
     <DocumentationFile>bin\iPhone\Release\Plugin.XamJam.Screen.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="CrossScreen.cs" />
     <Compile Include="ScreenImplementation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
