--- a/XamJam.Screen/Plugin.XamJam.Screen.WindowsPhone8/Plugin.XamJam.Screen.WindowsPhone8.csproj
+++ b/XamJam.Screen/Plugin.XamJam.Screen.WindowsPhone8/Plugin.XamJam.Screen.WindowsPhone8.csproj
@@ -85,6 +85,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="CrossScreen.cs" />
     <Compile Include="ScreenImplementation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
