--- a/XamJam.Screen/Plugin.XamJam.Screen.WindowsPhone81/Plugin.XamJam.Screen.WindowsPhone81.csproj
+++ b/XamJam.Screen/Plugin.XamJam.Screen.WindowsPhone81/Plugin.XamJam.Screen.WindowsPhone81.csproj
@@ -87,6 +87,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CrossScreen.cs" />
     <Compile Include="ScreenImplementation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
