Cosolidated same ScreenImplementation.cs files where possible Tested on Android S5 and WP81 simulator. Will remove -beta pre-release version once I test on iOS and UWP. I don't plan to test on WP8.

--- a/XamJam.Screen/Plugin.XamJam.Screen.UWP/Plugin.XamJam.Screen.UWP.csproj
+++ b/XamJam.Screen/Plugin.XamJam.Screen.UWP/Plugin.XamJam.Screen.UWP.csproj
@@ -109,7 +109,9 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CrossScreen.cs" />
+    <Compile Include="..\Plugin.XamJam.Screen\CrossScreen.cs">
+      <Link>CrossScreen.cs</Link>
+    </Compile>
     <Compile Include="ScreenImplementation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Plugin.XamJam.Screen.UWP.rd.xml" />
