--- a/XamJam.Screen/Plugin.XamJam.Screen.WindowsStore/Plugin.XamJam.Screen.WindowsStore.csproj
+++ b/XamJam.Screen/Plugin.XamJam.Screen.WindowsStore/Plugin.XamJam.Screen.WindowsStore.csproj
@@ -109,7 +109,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CrossScreen.cs" />
+    <Compile Include="..\Plugin.XamJam.Screen\CrossScreen.cs">
+      <Link>CrossScreen.cs</Link>
+    </Compile>
     <Compile Include="ScreenImplementation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
