--- a/XamJam.Screen/Plugin.XamJam.Screen.Android/Plugin.XamJam.Screen.Android.csproj
+++ b/XamJam.Screen/Plugin.XamJam.Screen.Android/Plugin.XamJam.Screen.Android.csproj
@@ -45,7 +45,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CrossScreen.cs" />
+    <Compile Include="..\Plugin.XamJam.Screen\CrossScreen.cs">
+      <Link>CrossScreen.cs</Link>
+    </Compile>
     <Compile Include="ScreenImplementation.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
