--- a/XamJam.Screen/Plugin.XamJam.Screen.WindowsPhone8/Plugin.XamJam.Screen.WindowsPhone8.csproj
+++ b/XamJam.Screen/Plugin.XamJam.Screen.WindowsPhone8/Plugin.XamJam.Screen.WindowsPhone8.csproj
@@ -85,9 +85,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="CrossScreen.cs" />
-    <Compile Include="ScreenImplementation.cs" />
+    <Compile Include="..\Plugin.XamJam.Screen\CrossScreen.cs">
+      <Link>CrossScreen.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScreenImplementation.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Plugin.XamJam.Screen.Abstractions\Plugin.XamJam.Screen.Abstractions.csproj">
