--- a/XamJam.BugHound/Plugin.XamJam.BugHound.WindowsPhone8/Plugin.XamJam.BugHound.WindowsPhone8.csproj
+++ b/XamJam.BugHound/Plugin.XamJam.BugHound.WindowsPhone8/Plugin.XamJam.BugHound.WindowsPhone8.csproj
@@ -5,12 +5,12 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{5876144B-47DD-4C4E-B421-BC03F191B996}</ProjectGuid>
+    <ProjectGuid>{7F0EC63D-7BAD-4BC5-8052-EC838760C398}</ProjectGuid>
     <ProjectTypeGuids>{C089C8C0-30E0-4E22-80C0-CE093F111A43};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Plugin.XamJam.Screen</RootNamespace>
-    <AssemblyName>Plugin.XamJam.Screen</AssemblyName>
+    <RootNamespace>Plugin.XamJam.BugHound</RootNamespace>
+    <AssemblyName>Plugin.XamJam.BugHound</AssemblyName>
     <TargetFrameworkIdentifier>WindowsPhone</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v8.0</TargetFrameworkVersion>
     <SilverlightVersion>$(TargetFrameworkVersion)</SilverlightVersion>
@@ -39,7 +39,7 @@
     <NoConfig>true</NoConfig>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>Bin\Release\Plugin.XamJam.Screen.XML</DocumentationFile>
+    <DocumentationFile>Bin\Release\Plugin.XamJam.BugHound.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
@@ -61,7 +61,7 @@
     <NoConfig>true</NoConfig>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\Plugin.XamJam.Screen.XML</DocumentationFile>
+    <DocumentationFile>bin\Release\Plugin.XamJam.BugHound.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|ARM' ">
     <DebugSymbols>true</DebugSymbols>
@@ -85,11 +85,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="..\Plugin.XamJam.Screen\CrossScreen.cs">
-      <Link>CrossScreen.cs</Link>
+    <Compile Include="..\Plugin.XamJam.BugHound\BugHoundHelper.cs">
+      <Link>BugHoundHelper.cs</Link>
     </Compile>
+    <Compile Include="BugHoundHelperImplementation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ScreenImplementation.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkVersion)\Microsoft.$(TargetFrameworkIdentifier).$(TargetFrameworkVersion).Overrides.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkVersion)\Microsoft.$(TargetFrameworkIdentifier).CSharp.targets" />
