--- a/XamJam.Screen/Plugin.XamJam.Screen.WindowsPhone81/Plugin.XamJam.Screen.WindowsPhone81.csproj
+++ b/XamJam.Screen/Plugin.XamJam.Screen.WindowsPhone81/Plugin.XamJam.Screen.WindowsPhone81.csproj
@@ -88,6 +88,12 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Plugin.XamJam.Screen.Abstractions\Plugin.XamJam.Screen.Abstractions.csproj">
+      <Project>{6edb0588-ffc5-4ef5-8a99-9e241d0f878d}</Project>
+      <Name>Plugin.XamJam.Screen.Abstractions</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '12.0' ">
     <VisualStudioVersion>12.0</VisualStudioVersion>
   </PropertyGroup>
