--- a/XamJam.Screen/Plugin.XamJam.Screen.Android/Plugin.XamJam.Screen.Android.csproj
+++ b/XamJam.Screen/Plugin.XamJam.Screen.Android/Plugin.XamJam.Screen.Android.csproj
@@ -55,6 +55,12 @@
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Plugin.XamJam.Screen.Abstractions\Plugin.XamJam.Screen.Abstractions.csproj">
+      <Project>{6edb0588-ffc5-4ef5-8a99-9e241d0f878d}</Project>
+      <Name>Plugin.XamJam.Screen.Abstractions</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
