--- a/XamJam.Screen/Plugin.XamJam.Screen.WindowsPhone8/Plugin.XamJam.Screen.WindowsPhone8.csproj
+++ b/XamJam.Screen/Plugin.XamJam.Screen.WindowsPhone8/Plugin.XamJam.Screen.WindowsPhone8.csproj
@@ -91,6 +91,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScreenImplementation.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Plugin.XamJam.Screen.Abstractions\Plugin.XamJam.Screen.Abstractions.csproj">
+      <Project>{6edb0588-ffc5-4ef5-8a99-9e241d0f878d}</Project>
+      <Name>Plugin.XamJam.Screen.Abstractions</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkVersion)\Microsoft.$(TargetFrameworkIdentifier).$(TargetFrameworkVersion).Overrides.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkVersion)\Microsoft.$(TargetFrameworkIdentifier).CSharp.targets" />
   <ProjectExtensions />
