--- a/XamJam.Screen/Plugin.XamJam.Screen.iOS/Plugin.XamJam.Screen.iOS.csproj
+++ b/XamJam.Screen/Plugin.XamJam.Screen.iOS/Plugin.XamJam.Screen.iOS.csproj
@@ -47,5 +47,11 @@
     <Reference Include="System.Core" />
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Plugin.XamJam.Screen.Abstractions\Plugin.XamJam.Screen.Abstractions.csproj">
+      <Project>{6EDB0588-FFC5-4EF5-8A99-9E241D0F878D}</Project>
+      <Name>Plugin.XamJam.Screen.Abstractions</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
 </Project>
